--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,3 +14,27 @@ body {
     display: block;
   }
 }
+
+.pswp-item[data-cropped="true"] {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  display: block;
+  position: relative;
+
+  img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    display: block;
+    object-fit: cover;
+    object-position: center;
+  }
+}
+
+.pswp-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  padding-block: 40px;
+}
